Mock up Backend by Service

--- a/toolproject/src/index.html
+++ b/toolproject/src/index.html
@@ -23,6 +23,10 @@
     <script src="https://bootadmin.net/js/moment.min.js"></script>
     <script src="https://bootadmin.net/js/fullcalendar.min.js"></script>
     <script src="https://bootadmin.net/js/bootadmin.min.js"></script>
+    <!-- Script Notifly -->
+    <script src="assets/plugin/bootstrap-notify-master/bootstrap-notify.min.js"></script>
+
+
 </body>
 
 </html>
