--- a/toolproject/src/index.html
+++ b/toolproject/src/index.html
@@ -7,22 +7,22 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://bootadmin.net/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="https://bootadmin.net/css/datatables.min.css">
-    <link rel="stylesheet" href="https://bootadmin.net/css/fullcalendar.min.css">
-    <link rel="stylesheet" href="https://bootadmin.net/css/bootadmin.min.css">
+    <link rel="stylesheet" href="./assets/css/datatables.min.css">
+    <link rel="stylesheet" href="./assets/css/fullcalendar.min.css">
+    <link rel="stylesheet" href="./assets/css/bootadmin.min.css">
 
 </head>
 
 <body>
     <app-root></app-root>
-    <script src="https://bootadmin.net/js/jquery.min.js"></script>
-    <script src="https://bootadmin.net/js/bootstrap.bundle.min.js"></script>
-    <script src="https://bootadmin.net/js/datatables.min.js"></script>
-    <script src="https://bootadmin.net/js/moment.min.js"></script>
-    <script src="https://bootadmin.net/js/fullcalendar.min.js"></script>
-    <script src="https://bootadmin.net/js/bootadmin.min.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/datatables.min.js"></script>
+    <script src="./assets/js/moment.min.js"></script>
+    <script src="./assets/js/fullcalendar.min.js"></script>
+    <script src="./assets/js/bootadmin.min.js"></script>
     <!-- Script Notifly -->
     <script src="assets/plugin/bootstrap-notify-master/bootstrap-notify.min.js"></script>
 
